# dual_quat

./: CMakeLists.txt  README.md  usage.cpp
dual_quat/: CMakeLists.txt  README.md  usage.cpp
